[gd_scene load_steps=17 format=4 uid="uid://byl36k88mr2i1"]

[ext_resource type="Script" path="res://addons/phantom_camera/scripts/phantom_camera_host/phantom_camera_host.gd" id="1_6mwdt"]
[ext_resource type="Script" path="res://game_manager.gd" id="1_30pe5"]
[ext_resource type="PackedScene" uid="uid://chvnmx1w7aeo4" path="res://jet/jet.tscn" id="1_x0prs"]
[ext_resource type="PackedScene" uid="uid://c00tkgqhnwlyi" path="res://level_manager.tscn" id="3_2107l"]
[ext_resource type="PackedScene" uid="uid://bbby63pyldyiu" path="res://enemies/boat/boat.tscn" id="4_g4jv0"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/phantom_camera/phantom_camera_2d.gd" id="6_04mai"]
[ext_resource type="TileSet" uid="uid://dw3ktkni1qm1w" path="res://tileset.tres" id="6_ofgak"]
[ext_resource type="Script" path="res://intro.gd" id="6_x73kj"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/resources/tween_resource.gd" id="9_7g7e2"]
[ext_resource type="Script" path="res://free_cam_controller.gd" id="10_msv50"]
[ext_resource type="FontFile" uid="uid://bt1psjapxvvr5" path="res://Fonts/Kenney High Square.ttf" id="11_3p2k2"]
[ext_resource type="Script" path="res://plusscore.gd" id="12_wehg3"]

[sub_resource type="Resource" id="Resource_v4ldd"]
script = ExtResource("9_7g7e2")
duration = 1.0
transition = 0
ease = 2

[sub_resource type="Resource" id="Resource_lu165"]
script = ExtResource("9_7g7e2")
duration = 1.0
transition = 0
ease = 2

[sub_resource type="Resource" id="Resource_scsaw"]
script = ExtResource("9_7g7e2")
duration = 1.0
transition = 0
ease = 2

[sub_resource type="LabelSettings" id="LabelSettings_h5ou8"]
line_spacing = 2.0
font = ExtResource("11_3p2k2")
font_color = Color(0, 0, 0, 1)

[node name="main" type="Node2D"]

[node name="GameManager" type="Node2D" parent="." node_paths=PackedStringArray("player", "level_manager", "enemy_spawner", "score_label", "plus_points")]
script = ExtResource("1_30pe5")
player = NodePath("../Jet")
level_manager = NodePath("../LevelManager")
enemy_spawner = NodePath("../LevelManager/EnemySpawner")
score_label = NodePath("../UI/Control/HBoxContainer/Score")
plus_points = NodePath("../UI/Control/HBoxContainer/plusscore")

[node name="Jet" parent="." instance=ExtResource("1_x0prs")]
position = Vector2(160, 253)

[node name="Camera2D" type="Camera2D" parent="."]
physics_interpolation_mode = 2
position = Vector2(160, 136)
zoom = Vector2(1.5, 1.5)

[node name="PhantomCameraHost" type="Node" parent="Camera2D"]
script = ExtResource("1_6mwdt")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(0, 240)

[node name="Layer0" type="TileMapLayer" parent="ParallaxBackground/ParallaxLayer"]
use_parent_material = true
tile_map_data = PackedByteArray("AAABAAQAAAAAAAIAAAACAAQAAAAAAAIAAAACAAUAAAAAAAIAAAADAAYAAAAAAAIAAAADAAcAAAAAAAIAAAAEAAcAAAAAAAIAAAAFAAcAAAAAAAIAAAAGAAYAAAAAAAIAAAAGAAUAAAAAAAIAAAAFAAUAAAAAAAIAAAAEAAUAAAAAAAIAAAADAAUAAAAAAAIAAAADAAQAAAAAAAIAAAAEAAYAAAAAAAIAAAAFAAYAAAAAAAIAAAAFAAQAAAAAAAIAAAAEAAQAAAAAAAIAAAACAAYAAAAAAAIAAAACAAcAAAAAAAIAAAABAAYAAAAAAAIAAAABAAUAAAAAAAIAAAABAAMAAAAAAAIAAAAAAAYAAAAAAAIAAAAAAAcAAAAAAAIAAAAAAAUAAAAAAAIAAAAAAAQAAAAAAAIAAAAAAAMAAAAAAAIAAAAAAAIAAAAAAAIAAAAAAAEAAAAAAAIAAAAAAAAAAAAAAAIAAAABAAAAAAAAAAIAAAACAAAAAAAAAAIAAAADAAAAAAAAAAIAAAAEAAAAAAAAAAIAAAAFAAAAAAAAAAIAAAAGAAAAAAAAAAIAAAAHAAAAAAAAAAIAAAANAAAAAAAAAAIAAAAOAAAAAAAAAAIAAAAPAAAAAAAAAAIAAAAQAAAAAAAAAAIAAAARAAAAAAAAAAIAAAASAAAAAAAAAAIAAAATAAAAAAAAAAIAAAATAAEAAAAAAAIAAAATAAIAAAAAAAIAAAATAAMAAAAAAAIAAAATAAQAAAAAAAIAAAATAAUAAAAAAAIAAAATAAYAAAAAAAIAAAATAAcAAAAAAAIAAAATAAgAAAAAAAIAAAATAAkAAAAAAAIAAAATAAoAAAAAAAIAAAATAAsAAAAAAAIAAAASAAsAAAAAAAIAAAARAAsAAAAAAAIAAAAQAAsAAAAAAAIAAAAPAAsAAAAAAAIAAAAOAAsAAAAAAAIAAAANAAsAAAAAAAIAAAAMAAsAAAAAAAIAAAALAAsAAAAAAAIAAAAKAAsAAAAAAAIAAAAJAAsAAAAAAAIAAAAIAAsAAAAAAAIAAAAHAAsAAAAAAAIAAAAGAAsAAAAAAAIAAAAFAAsAAAAAAAIAAAAEAAsAAAAAAAIAAAADAAsAAAAAAAIAAAACAAsAAAAAAAIAAAABAAsAAAAAAAIAAAAAAAsAAAAAAAIAAAAAAAoAAAAAAAIAAAAAAAkAAAAAAAIAAAAAAAgAAAAAAAIAAAABAAkAAAAAAAIAAAABAAoAAAAAAAIAAAABAAgAAAAAAAIAAAABAAcAAAAAAAIAAAACAAgAAAAAAAIAAAACAAkAAAAAAAIAAAACAAoAAAAAAAIAAAADAAoAAAAAAAIAAAAEAAoAAAAAAAIAAAAFAAoAAAAAAAIAAAAGAAoAAAAAAAIAAAAHAAoAAAAAAAIAAAAIAAoAAAAAAAIAAAAJAAoAAAAAAAIAAAAKAAoAAAAAAAIAAAALAAoAAAAAAAIAAAAMAAoAAAAAAAIAAAANAAoAAAAAAAIAAAAOAAoAAAAAAAIAAAAPAAoAAAAAAAIAAAAQAAoAAAAAAAIAAAARAAoAAAAAAAIAAAASAAoAAAAAAAIAAAASAAkAAAAAAAIAAAARAAkAAAAAAAIAAAAQAAkAAAAAAAIAAAAPAAkAAAAAAAIAAAAOAAkAAAAAAAIAAAANAAkAAAAAAAIAAAAMAAkAAAAAAAIAAAALAAkAAAAAAAIAAAAKAAkAAAAAAAIAAAAJAAkAAAAAAAIAAAAIAAkAAAAAAAIAAAAHAAkAAAAAAAIAAAAGAAkAAAAAAAIAAAAFAAkAAAAAAAIAAAAEAAkAAAAAAAIAAAADAAkAAAAAAAIAAAADAAgAAAAAAAIAAAAEAAgAAAAAAAIAAAAFAAgAAAAAAAIAAAAGAAgAAAAAAAIAAAAHAAgAAAAAAAIAAAAIAAgAAAAAAAIAAAAJAAgAAAAAAAIAAAAKAAgAAAAAAAIAAAALAAgAAAAAAAIAAAAMAAgAAAAAAAIAAAANAAgAAAAAAAIAAAAOAAgAAAAAAAIAAAAPAAgAAAAAAAIAAAAQAAgAAAAAAAIAAAARAAgAAAAAAAIAAAASAAcAAAAAAAIAAAASAAgAAAAAAAIAAAARAAcAAAAAAAIAAAAQAAcAAAAAAAIAAAAPAAcAAAAAAAIAAAAOAAcAAAAAAAIAAAANAAcAAAAAAAIAAAAMAAcAAAAAAAIAAAALAAcAAAAAAAIAAAAKAAcAAAAAAAIAAAAJAAcAAAAAAAIAAAAIAAcAAAAAAAIAAAAHAAcAAAAAAAIAAAAGAAcAAAAAAAIAAAAHAAYAAAAAAAIAAAAIAAYAAAAAAAIAAAAJAAYAAAAAAAIAAAAKAAYAAAAAAAIAAAALAAYAAAAAAAIAAAAMAAYAAAAAAAIAAAANAAYAAAAAAAIAAAAOAAYAAAAAAAIAAAAPAAYAAAAAAAIAAAAQAAYAAAAAAAIAAAARAAYAAAAAAAIAAAASAAYAAAAAAAIAAAASAAUAAAAAAAIAAAASAAQAAAAAAAIAAAASAAMAAAAAAAIAAAASAAIAAAAAAAIAAAASAAEAAAAAAAIAAAARAAEAAAAAAAIAAAAQAAEAAAAAAAIAAAAPAAEAAAAAAAIAAAAOAAEAAAAAAAIAAAANAAEAAAAAAAIAAAAMAAEAAAAAAAIAAAALAAEAAAAAAAIAAAAKAAEAAAAAAAIAAAAJAAEAAAAAAAIAAAAIAAEAAAAAAAIAAAAHAAEAAAAAAAIAAAAGAAEAAAAAAAIAAAAFAAEAAAAAAAIAAAAEAAEAAAAAAAIAAAADAAEAAAAAAAIAAAACAAEAAAAAAAIAAAAJAAAAAAAAAAIAAAAKAAAAAAAAAAIAAAALAAAAAAAAAAIAAAAMAAAAAAAAAAIAAAAIAAAAAAAAAAIAAAABAAEAAAAAAAIAAAABAAIAAAAAAAIAAAACAAIAAAAAAAIAAAAMAAUAAAAAAAIAAAAMAAQAAAAAAAIAAAAMAAMAAAAAAAIAAAAMAAIAAAAAAAIAAAALAAIAAAAAAAIAAAAKAAIAAAAAAAIAAAAJAAIAAAAAAAIAAAAIAAIAAAAAAAIAAAAHAAIAAAAAAAIAAAAGAAIAAAAAAAIAAAAFAAIAAAAAAAIAAAAEAAIAAAAAAAIAAAADAAIAAAAAAAIAAAADAAMAAAAAAAIAAAACAAMAAAAAAAIAAAAEAAMAAAAAAAIAAAAFAAMAAAAAAAIAAAAGAAMAAAAAAAIAAAAGAAQAAAAAAAIAAAAHAAQAAAAAAAIAAAAHAAMAAAAAAAIAAAAIAAMAAAAAAAIAAAAIAAQAAAAAAAIAAAAIAAUAAAAAAAIAAAAHAAUAAAAAAAIAAAAJAAUAAAAAAAIAAAAJAAQAAAAAAAIAAAAJAAMAAAAAAAIAAAAKAAMAAAAAAAIAAAAKAAQAAAAAAAIAAAAKAAUAAAAAAAIAAAALAAUAAAAAAAIAAAALAAQAAAAAAAIAAAALAAMAAAAAAAIAAAANAAIAAAAAAAIAAAANAAMAAAAAAAIAAAANAAQAAAAAAAIAAAANAAUAAAAAAAIAAAAOAAUAAAAAAAIAAAAOAAQAAAAAAAIAAAAOAAMAAAAAAAIAAAAOAAIAAAAAAAIAAAAPAAIAAAAAAAIAAAAPAAMAAAAAAAIAAAAPAAQAAAAAAAIAAAAPAAUAAAAAAAIAAAAQAAUAAAAAAAIAAAAQAAQAAAAAAAIAAAAQAAMAAAAAAAIAAAAQAAIAAAAAAAIAAAARAAIAAAAAAAIAAAARAAMAAAAAAAIAAAARAAQAAAAAAAIAAAARAAUAAAAAAAIAAAAAAAwAAAAAAAIAAAAAAA0AAAAAAAIAAAAAAA4AAAAAAAIAAAABAAwAAAAAAAIAAAABAA0AAAAAAAIAAAABAA4AAAAAAAIAAAACAAwAAAAAAAIAAAACAA0AAAAAAAIAAAACAA4AAAAAAAIAAAADAAwAAAAAAAIAAAADAA0AAAAAAAIAAAADAA4AAAAAAAIAAAAEAAwAAAAAAAIAAAAEAA0AAAAAAAIAAAAEAA4AAAAAAAIAAAAFAAwAAAAAAAIAAAAFAA0AAAAAAAIAAAAFAA4AAAAAAAIAAAAGAAwAAAAAAAIAAAAGAA0AAAAAAAIAAAAGAA4AAAAAAAIAAAAHAAwAAAAAAAIAAAAHAA0AAAAAAAIAAAAHAA4AAAAAAAIAAAAIAAwAAAAAAAIAAAAIAA0AAAAAAAIAAAAIAA4AAAAAAAIAAAAJAAwAAAAAAAIAAAAJAA0AAAAAAAIAAAAJAA4AAAAAAAIAAAAKAAwAAAAAAAIAAAAKAA0AAAAAAAIAAAAKAA4AAAAAAAIAAAALAAwAAAAAAAIAAAALAA0AAAAAAAIAAAALAA4AAAAAAAIAAAAMAAwAAAAAAAIAAAAMAA0AAAAAAAIAAAAMAA4AAAAAAAIAAAANAAwAAAAAAAIAAAANAA0AAAAAAAIAAAANAA4AAAAAAAIAAAAOAAwAAAAAAAIAAAAOAA0AAAAAAAIAAAAOAA4AAAAAAAIAAAAPAAwAAAAAAAIAAAAPAA0AAAAAAAIAAAAPAA4AAAAAAAIAAAAQAAwAAAAAAAIAAAAQAA0AAAAAAAIAAAAQAA4AAAAAAAIAAAARAAwAAAAAAAIAAAARAA0AAAAAAAIAAAARAA4AAAAAAAIAAAASAAwAAAAAAAIAAAASAA0AAAAAAAIAAAASAA4AAAAAAAIAAAATAAwAAAAAAAIAAAATAA0AAAAAAAIAAAATAA4AAAAAAAIAAAA=")
tile_set = ExtResource("6_ofgak")

[node name="LevelManager" parent="." instance=ExtResource("3_2107l")]
position = Vector2(160, 252)

[node name="Sprite2D" parent="LevelManager" index="1"]
visible = false

[node name="Layer0" type="TileMapLayer" parent="LevelManager"]
use_parent_material = true
position = Vector2(-160, 0)
tile_map_data = PackedByteArray("AAAAAAEAAAADAAIAAAAAAAIAAAADAAIAAAAAAAMAAAADAAIAAAAAAAQAAAADAAIAAAAAAAUAAAADAAIAAAAAAAYAAAADAAIAAAAAAAcAAAADAAIAAAAAAAgAAAADAAIAAAAAAAkAAAADAAIAAAAAAAoAAAADAAIAAAAAAAsAAAADAAIAAAAAAAwAAAADAAIAAAAAAA0AAAADAAIAAAAAAA4AAAADAAIAAAABAAEAAAADAAIAAAABAAIAAAADAAIAAAABAAMAAAADAAIAAAABAAQAAAADAAIAAAABAAUAAAADAAIAAAABAAYAAAADAAIAAAABAAcAAAADAAIAAAABAAgAAAADAAIAAAABAAkAAAADAAIAAAABAAoAAAADAAIAAAABAAsAAAADAAIAAAABAAwAAAADAAIAAAABAA0AAAADAAIAAAABAA4AAAADAAIAAAACAAAAAAADAAIAAAACAAEAAAADAAIAAAACAAIAAAADAAIAAAACAAMAAAADAAIAAAACAAQAAAADAAIAAAACAAUAAAADAAIAAAACAAYAAAADAAIAAAACAAcAAAADAAIAAAACAAgAAAADAAIAAAACAAkAAAADAAIAAAACAAoAAAADAAIAAAACAAsAAAADAAIAAAACAAwAAAADAAIAAAACAA0AAAADAAIAAAACAA4AAAADAAIAAAADAAAAAAADAAIAAAADAAEAAAADAAIAAAADAAIAAAADAAIAAAADAAMAAAADAAIAAAADAAQAAAADAAIAAAADAAUAAAADAAIAAAADAAYAAAADAAIAAAADAAcAAAADAAIAAAADAAgAAAADAAIAAAADAAkAAAADAAIAAAADAAoAAAADAAIAAAADAAsAAAADAAIAAAADAAwAAAADAAIAAAADAA0AAAADAAIAAAADAA4AAAADAAIAAAAEAAAAAAADAAIAAAAEAAEAAAADAAIAAAAEAAIAAAADAAIAAAAEAAMAAAADAAIAAAAEAAQAAAADAAIAAAAEAAUAAAADAAIAAAAEAAYAAAADAAIAAAAEAAcAAAADAAIAAAAEAAgAAAADAAIAAAAEAAkAAAADAAIAAAAEAAoAAAADAAIAAAAEAAsAAAADAAIAAAAEAAwAAAADAAIAAAAEAA0AAAADAAIAAAAEAA4AAAADAAIAAAAFAAAAAAADAAIAAAAFAAEAAAADAAIAAAAFAAIAAAADAAIAAAAFAAMAAAADAAIAAAAFAAQAAAADAAIAAAAFAAUAAAADAAIAAAAFAAYAAAADAAIAAAAFAAcAAAADAAIAAAAFAAgAAAADAAIAAAAFAAkAAAADAAIAAAAFAAoAAAADAAIAAAAFAAsAAAADAAIAAAAFAAwAAAADAAIAAAAFAA0AAAADAAIAAAAFAA4AAAADAAIAAAAGAAAAAAADAAIAAAAGAAEAAAADAAIAAAAGAAIAAAADAAIAAAAGAAMAAAADAAIAAAAGAAQAAAADAAIAAAAGAAUAAAADAAIAAAAGAAYAAAADAAIAAAAGAAcAAAADAAIAAAAGAAgAAAADAAIAAAAGAAkAAAADAAIAAAAGAAoAAAADAAIAAAAGAAsAAAADAAIAAAAGAAwAAAADAAIAAAAGAA0AAAADAAIAAAAGAA4AAAADAAIAAAAHAAAAAAADAAIAAAAHAAEAAAADAAIAAAAHAAIAAAADAAIAAAAHAAMAAAADAAIAAAAHAAQAAAADAAIAAAAHAAUAAAADAAIAAAAHAAYAAAADAAIAAAAHAAcAAAADAAIAAAAHAAgAAAADAAIAAAAHAAkAAAADAAIAAAAHAAoAAAADAAIAAAAHAAsAAAADAAIAAAAHAAwAAAADAAIAAAAHAA0AAAADAAIAAAAHAA4AAAADAAIAAAAIAAAAAAADAAIAAAAIAAEAAAADAAIAAAAIAAIAAAADAAIAAAAIAAMAAAADAAIAAAAIAAQAAAADAAIAAAAIAAUAAAADAAIAAAAIAAYAAAADAAIAAAAIAAcAAAADAAIAAAAIAAgAAAADAAIAAAAIAAkAAAADAAIAAAAIAAoAAAADAAIAAAAIAAsAAAADAAIAAAAIAAwAAAADAAIAAAAIAA0AAAADAAIAAAAIAA4AAAADAAIAAAAAAA8AAAADAAIAAAAAABAAAAADAAIAAAAAABEAAAADAAIAAAAAABIAAAADAAIAAAAAABMAAAADAAIAAAABAA8AAAADAAIAAAABABAAAAADAAIAAAABABEAAAADAAIAAAABABIAAAADAAIAAAABABMAAAADAAIAAAACAA8AAAADAAIAAAACABAAAAADAAIAAAACABEAAAADAAIAAAACABIAAAADAAIAAAACABMAAAADAAIAAAADAA8AAAADAAIAAAADABAAAAADAAIAAAADABEAAAADAAIAAAADABIAAAADAAIAAAADABMAAAADAAIAAAAEAA8AAAADAAIAAAAEABAAAAADAAIAAAAEABEAAAADAAIAAAAEABIAAAADAAIAAAAEABMAAAADAAIAAAAFAA8AAAADAAIAAAAFABAAAAADAAIAAAAFABEAAAADAAIAAAAFABIAAAADAAIAAAAFABMAAAADAAIAAAAGAA8AAAADAAIAAAAGABAAAAADAAIAAAAGABEAAAADAAIAAAAGABIAAAADAAIAAAAGABMAAAADAAIAAAAHAA8AAAADAAIAAAAHABAAAAADAAIAAAAHABEAAAADAAIAAAAHABIAAAADAAIAAAAHABMAAAADAAIAAAAIAA8AAAADAAIAAAAIABAAAAADAAIAAAAIABEAAAADAAIAAAAIABIAAAADAAIAAAAIABMAAAADAAIAAAALAAAAAAADAAIAAAALAAEAAAADAAIAAAALAAIAAAADAAIAAAALAAMAAAADAAIAAAALAAQAAAADAAIAAAALAAUAAAADAAIAAAALAAYAAAADAAIAAAALAAcAAAADAAIAAAALAAgAAAADAAIAAAALAAkAAAADAAIAAAALAAoAAAADAAIAAAALAAsAAAADAAIAAAALAAwAAAADAAIAAAALAA0AAAADAAIAAAALAA4AAAADAAIAAAALAA8AAAADAAIAAAALABAAAAADAAIAAAALABEAAAADAAIAAAALABIAAAADAAIAAAALABMAAAADAAIAAAAMAAAAAAADAAIAAAAMAAEAAAADAAIAAAAMAAIAAAADAAIAAAAMAAMAAAADAAIAAAAMAAQAAAADAAIAAAAMAAUAAAADAAIAAAAMAAYAAAADAAIAAAAMAAcAAAADAAIAAAAMAAgAAAADAAIAAAAMAAkAAAADAAIAAAAMAAoAAAADAAIAAAAMAAsAAAADAAIAAAAMAAwAAAADAAIAAAAMAA0AAAADAAIAAAAMAA4AAAADAAIAAAAMAA8AAAADAAIAAAAMABAAAAADAAIAAAAMABEAAAADAAIAAAAMABIAAAADAAIAAAAMABMAAAADAAIAAAANAAAAAAADAAIAAAANAAEAAAADAAIAAAANAAIAAAADAAIAAAANAAMAAAADAAIAAAANAAQAAAADAAIAAAANAAUAAAADAAIAAAANAAYAAAADAAIAAAANAAcAAAADAAIAAAANAAgAAAADAAIAAAANAAkAAAADAAIAAAANAAoAAAADAAIAAAANAAsAAAADAAIAAAANAAwAAAADAAIAAAANAA0AAAADAAIAAAANAA4AAAADAAIAAAANAA8AAAADAAIAAAANABAAAAADAAIAAAANABEAAAADAAIAAAANABIAAAADAAIAAAANABMAAAADAAIAAAAOAAAAAAADAAIAAAAOAAEAAAADAAIAAAAOAAIAAAADAAIAAAAOAAMAAAADAAIAAAAOAAQAAAADAAIAAAAOAAUAAAADAAIAAAAOAAYAAAADAAIAAAAOAAcAAAADAAIAAAAOAAgAAAADAAIAAAAOAAkAAAADAAIAAAAOAAoAAAADAAIAAAAOAAsAAAADAAIAAAAOAAwAAAADAAIAAAAOAA0AAAADAAIAAAAOAA4AAAADAAIAAAAOAA8AAAADAAIAAAAOABAAAAADAAIAAAAOABEAAAADAAIAAAAOABIAAAADAAIAAAAOABMAAAADAAIAAAAPAAAAAAADAAIAAAAPAAEAAAADAAIAAAAPAAIAAAADAAIAAAAPAAMAAAADAAIAAAAPAAQAAAADAAIAAAAPAAUAAAADAAIAAAAPAAYAAAADAAIAAAAPAAcAAAADAAIAAAAPAAgAAAADAAIAAAAPAAkAAAADAAIAAAAPAAoAAAADAAIAAAAPAAsAAAADAAIAAAAPAAwAAAADAAIAAAAPAA0AAAADAAIAAAAPAA4AAAADAAIAAAAPAA8AAAADAAIAAAAPABAAAAADAAIAAAAPABEAAAADAAIAAAAPABIAAAADAAIAAAAPABMAAAADAAIAAAAQAAAAAAADAAIAAAAQAAEAAAADAAIAAAAQAAIAAAADAAIAAAAQAAMAAAADAAIAAAAQAAQAAAADAAIAAAAQAAUAAAADAAIAAAAQAAYAAAADAAIAAAAQAAcAAAADAAIAAAAQAAgAAAADAAIAAAAQAAkAAAADAAIAAAAQAAoAAAADAAIAAAAQAAsAAAADAAIAAAAQAAwAAAADAAIAAAAQAA0AAAADAAIAAAAQAA4AAAADAAIAAAAQAA8AAAADAAIAAAAQABAAAAADAAIAAAAQABEAAAADAAIAAAAQABIAAAADAAIAAAAQABMAAAADAAIAAAARAAAAAAADAAIAAAARAAEAAAADAAIAAAARAAIAAAADAAIAAAARAAMAAAADAAIAAAARAAQAAAADAAIAAAARAAUAAAADAAIAAAARAAYAAAADAAIAAAARAAcAAAADAAIAAAARAAgAAAADAAIAAAARAAkAAAADAAIAAAARAAoAAAADAAIAAAARAAsAAAADAAIAAAARAAwAAAADAAIAAAARAA0AAAADAAIAAAARAA4AAAADAAIAAAARAA8AAAADAAIAAAARABAAAAADAAIAAAARABEAAAADAAIAAAARABIAAAADAAIAAAARABMAAAADAAIAAAASAAAAAAADAAIAAAASAAEAAAADAAIAAAASAAIAAAADAAIAAAASAAMAAAADAAIAAAASAAQAAAADAAIAAAASAAUAAAADAAIAAAASAAYAAAADAAIAAAASAAcAAAADAAIAAAASAAgAAAADAAIAAAASAAkAAAADAAIAAAASAAoAAAADAAIAAAASAAsAAAADAAIAAAASAAwAAAADAAIAAAASAA0AAAADAAIAAAASAA4AAAADAAIAAAASAA8AAAADAAIAAAASABAAAAADAAIAAAASABEAAAADAAIAAAASABIAAAADAAIAAAASABMAAAADAAIAAAATAAAAAAADAAIAAAATAAEAAAADAAIAAAATAAIAAAADAAIAAAATAAMAAAADAAIAAAATAAQAAAADAAIAAAATAAUAAAADAAIAAAATAAYAAAADAAIAAAATAAcAAAADAAIAAAATAAgAAAADAAIAAAATAAkAAAADAAIAAAATAAoAAAADAAIAAAATAAsAAAADAAIAAAATAAwAAAADAAIAAAATAA0AAAADAAIAAAATAA4AAAADAAIAAAATAA8AAAADAAIAAAATABAAAAADAAIAAAATABEAAAADAAIAAAATABIAAAADAAIAAAATABMAAAADAAIAAAAAAAAAAAADAAIAAAABAAAAAAADAAIAAAA=")
tile_set = ExtResource("6_ofgak")

[node name="Boat" parent="." instance=ExtResource("4_g4jv0")]
position = Vector2(160, -160)

[node name="IntroController" type="Node2D" parent="." node_paths=PackedStringArray("lvl_manager")]
script = ExtResource("6_x73kj")
lvl_manager = NodePath("../LevelManager")

[node name="IntroCamera" type="Node2D" parent="IntroController"]
editor_description = "Camera used on game start"
position = Vector2(160, 136)
script = ExtResource("6_04mai")
priority = 200
zoom = Vector2(1.5, 1.5)
tween_resource = SubResource("Resource_v4ldd")
draw_limits = true

[node name="MainCamera" type="Node2D" parent="." node_paths=PackedStringArray("follow_target")]
position = Vector2(160, 238.42)
script = ExtResource("6_04mai")
priority = 50
follow_mode = 2
follow_target = NodePath("../Jet")
tween_resource = SubResource("Resource_lu165")
follow_offset = Vector2(0, -14.58)
draw_limits = true
limit_left = 0
limit_right = 320

[node name="FreeCamController" type="Node2D" parent="."]
script = ExtResource("10_msv50")

[node name="FreeCamera" type="Node2D" parent="FreeCamController" node_paths=PackedStringArray("follow_target")]
position = Vector2(-370, -11)
script = ExtResource("6_04mai")
follow_mode = 1
follow_target = NodePath("../CamTarget")
snap_to_pixel = true
tween_resource = SubResource("Resource_scsaw")
tween_on_load = false
draw_limits = true

[node name="CamTarget" type="Node2D" parent="FreeCamController"]
position = Vector2(-370, -11)

[node name="UI" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Control"]
layout_mode = 1
offset_left = 4.0
offset_top = 4.0
offset_right = 62.0
offset_bottom = 18.0

[node name="Score" type="Label" parent="UI/Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "0123456789"
label_settings = SubResource("LabelSettings_h5ou8")

[node name="plusscore" type="Label" parent="UI/Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "+200"
label_settings = SubResource("LabelSettings_h5ou8")
script = ExtResource("12_wehg3")

[editable path="LevelManager"]
